# ROS2_tutorial_image_transport_plugins

./: LICENSE  README.md  README_ESP.md
basic_plugin_ws/src/basic_impl_plugin/: CMakeLists.txt  package.xml  plugins.xml
basic_plugin_ws/src/basic_impl_plugin/include/basic_impl_plugin/: basic_publisher.h  basic_subscriber.h
basic_plugin_ws/src/basic_impl_plugin/src/: basic_publisher.cpp  basic_subscriber.cpp  manifest.cpp
basic_plugin_ws/src/basic_plugin/: CMakeLists.txt  package.xml  plugins.xml
basic_plugin_ws/src/basic_plugin/include/basic_plugin/: basic_publisher.h  basic_subscriber.h
basic_plugin_ws/src/basic_plugin/src/: basic_publisher.cpp  basic_subscriber.cpp  manifest.cpp
basic_plugin_ws/src/coded_interfaces/: CMakeLists.txt  package.xml
basic_plugin_ws/src/coded_interfaces/msg/: Basic.msg
other_tools_ws/src/cam_video_example/: CMakeLists.txt  package.xml
other_tools_ws/src/cam_video_example/src/: camera_publisher.cpp  generic_subscriber.cpp
