<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>basic_plugin</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="agutig@github.com">agutig</maintainer>
   <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>pluginlib</depend> <!-- Add this -->
  <depend>cv_bridge</depend>
  <depend>coded_interfaces</depend> <!-- Add your personalized interfaces -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <image_transport plugin="${prefix}/plugins.xml" /> <!-- Add this -->
  </export>
</package>
